--- a/index.html
+++ b/index.html
@@ -3,63 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style type="text/css">
-				.mdiv{
-			position: fixed;
-			top: 0px;
-			left: 0px;
-			height: 100vh;
-			width: 100%;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			background-color: lightgray;
-			background-image: url(https://img.freepik.com/free-photo/sketchbook-with-colored-pencils-blue-background-top-view_169016-38181.jpg);
-			background-repeat: no-repeat;
-	        background-position: center;
-	        background-size: cover;
-		}
-
-		.container{
-			width: 210px;
-			height: 350px;
-			/*background-color: lightgray;*/
-			border-radius: 40px;
-			padding: 20px;
-			box-shadow: 0px 0px 50px red;
-		}
-
-		input{
-			height: 40px;
-			width: 40px;
-			margin: 4px;
-			border: none;
-			border-radius: 5px;
-			background-color:grey;
-			
-			color: white;
-			font-family: Arial Black;
-			font-size: 15px;
-		}
-		
-		.eq{
-			width: 92px;
-			margin-left: 10px;
-			background-color: orange;
-		}
-
-		.op{
-			background-color: black;
-			border: none;
-			outline: none;
-			box-shadow: 0px 0px 2px grey;
-			width: 90%;
-			text-align: right;
-		}
-
-		.opr{
-			background-color: orange;
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Calculator</title>
 </head>
 <body>
